Can fetch data from firebase

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,9 +53,10 @@
         android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="64dp"
+        android:onClick="signInUser"
         android:text="@string/sign_in_button"
         android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/or_textview"
@@ -82,6 +83,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="40dp"
+        android:onClick="signUpUser"
         android:text="@string/sign_up_button"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
